--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
           <a class="social-links" target="_blank" href="https://www.instagram.com/vaibz23/"><i class="fab fa-instagram social-icons"></i></a>
           <a class="social-links" target="_blank" href="https://www.linkedin.com/in/vaibhav-pathak-9425141a6/"> <i class="fab fa-linkedin  social-icons"></i></a>
           <a class="social-links" target="_blank" href="https://github.com/vaibz2"> <i class="fab fa-github    social-icons"></i></a>
-          <p class="copyright-txt">© 2021 VAIBHAV PATHAK</p>
+          <p class="copyright-txt">© 2021 MY BLOGS</p>
       </div>
       </footer>
   <script src="index.js"></script>
